# gd

./: .gitignore  CMakeLists.txt  readme.md  todo.md
engine/: CMakeLists.txt
engine/code/engine/: plugin_engine.cpp
engine/code/foundation/: FileWatch.hpp  api_registry.ixx  plugin_manager.ixx  print.ixx
engine/code/sprite_manager/: plugin_sprite_manager.cpp
engine/src/engine/: plugin_engine.cpp
engine/src/foundation/: api.h  api_registry.cpp  api_registry.h  api_registry.ixx  engine_math.h  event_stream.cpp  event_stream.h  foundation.h  foundation.ixx  global_exception_handler.cpp  global_exception_handler.h  global_exception_handler.ixx  math.ixx  plugin_manager.cpp  plugin_manager.h  plugin_manager.ixx  print.cpp  print.h  print.ixx
engine/src/job_system/: mpmc_bounded_queue.h  plugin_job_system.cpp
engine/src/sprite_manager/: plugin_sprite_manager.cpp
games/flappy/: CMakeLists.txt  engine.ixx  game.ixx  main.cpp  math.ixx
games/flappy/code/: main.cpp
games/flappy/code/engine/: plugin_engine.cpp
games/flappy/code/foundation/: api_registry.ixx  foundation.ixx  math.ixx  plugin_manager.ixx
games/flappy/code/game/: plugin_game.cpp
games/flappy/code/sprite_manager/: plugin_sprite_manager.cpp
games/flappy/src/: main.cpp
games/flappy/src/flappy_game/: flappy_game.h  plugin_flappy_game.cpp
games/flappy/src/game/: plugin_game.cpp
games/rpg/: CMakeLists.txt  design.md
games/rpg/src/: main.cpp
games/rpg/src/rpg_game/: plugin_rpg_game.cpp  rpg_game.h
tools/asset_compiler/: CMakeLists.txt
